--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -6,4 +6,4 @@ webext_adder_srcs = [
 	'main.cpp'
 ]
 
-webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs)
+webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs, install: true, install_dir: get_option('libexecdir'))
