[desktop-app] Added a global filtering utility
	Useful when your friend doesn't have your tastes

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -17,6 +17,7 @@ deskapp_srcs = [
 	'db/account.cpp',
 	'db/artwork.cpp',
 	'db/db.cpp',
+	'db/filter.cpp',
 	'gui/artwork-viewport.cpp',
 	'gui/font.cpp',
 	'gui/slideshow.cpp',
