Made asynchronous artwork load
	Bonus: Artwork size is stored in the DB allowing grid generation without loading the artwork itself
	Bug: Due to SDL::WaitEvent, loading is only visible upon interactions.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -16,6 +16,7 @@ deskapp_srcs = [
 	'config.cpp',
 	'db/account.cpp',
 	'db/artwork.cpp',
+	'db/artwork-loader.cpp',
 	'db/db.cpp',
 	'db/filter.cpp',
 	'gui/artwork-viewport.cpp',
