No longer install inih in 'meson install'
	This would stain your system

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -2,6 +2,7 @@
 roboto_proj = subproject('roboto')
 inith_proj = subproject('inih', default_options: [
 	'with_INIReader=true',
+	'distro_install=false',
 ])
 
 deskapp_deps = [
