[desktop-app] Made first-run modal
	Now the user get a welcome message upon the first startup.
	This also reverts commit 7aa35adf1a89e08f17d08bf736ee65e48d7832df.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -21,6 +21,7 @@ deskapp_srcs = [
 	'db/db.cpp',
 	'db/filter.cpp',
 	'gui/artwork-viewport.cpp',
+	'gui/first-run.cpp',
 	'gui/font.cpp',
 	'gui/slideshow.cpp',
 	'gui/view-slideshow.cpp',
