[webextension] Added gecko's "strict_min_version" in manifest.json

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -17,7 +17,8 @@
 	],
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "arcollect@d-spirits.me"
+			"id": "arcollect@d-spirits.me",
+			"strict_min_version": "50.0a1"
 		}
 	}
 }
