Added enable_native_progs Meson option
	This skip C++ code and allows to make a simple webextension in a Ubuntu machine CI.

--- a/meson.build
+++ b/meson.build
@@ -5,20 +5,25 @@ project('arcollect','cpp', default_options: [
 
 # Options
 enable_webextension = get_option('enable_webextension')
+enable_native_progs = get_option('enable_native_progs')
 
 # Programs
 prog_zip = find_program('zip', native: true, required: enable_webextension)
 # Dependencies
+if enable_native_progs
 dep_sdl2 = dependency('sdl2')
 dep_sdl2_image = dependency('SDL2_image')
 dep_sdl2_ttf   = dependency('SDL2_ttf')
 dep_sqlite3 = dependency('sqlite3', version: '>=3.35.0')
+endif
 
 # Add subdir (include order is important !)
-subdir('db-schema')
-subdir('common')
-subdir('desktop-app')
-subdir('webext-adder')
+if enable_native_progs
+	subdir('db-schema')
+	subdir('common')
+	subdir('desktop-app')
+	subdir('webext-adder')
+endif
 if enable_webextension
 	subdir('webextension')
 endif
