--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,24 +20,29 @@ jobs:
       - uses: actions/checkout@v2
       - name: Recursive checkout
         run: git submodule update --init --recursive
-      - uses: BSFishy/meson-build@v1.0.3
+      - name: Build project
+        uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-      - uses: BSFishy/meson-build@v1.0.3
+      - name: Test project
+        uses: BSFishy/meson-build@v1.0.3
         with:
           action: test
-      - uses: BSFishy/meson-build@v1.0.3
+      - name: Install project
+        uses: BSFishy/meson-build@v1.0.3
         with:
           action: install
         env:
           DESTDIR: "archive-out"
       - name: Archiving
         run: tar -cf archive-out.tar -C build archive-out --transform 's/archive-out//g'
-      - uses: actions/upload-artifact@v2
+      - name: Uploading DESDIR artifact
+        uses: actions/upload-artifact@v2
         with:
           name: install.tar
           path: archive-out.tar
-      - uses: actions/upload-artifact@v2
+      - name: Uploading arcollect-webextension.zip artifact
+        uses: actions/upload-artifact@v2
         with:
           name: arcollect-webextension.zip
           path: build/webextension/arcollect.zip
