--- a/.github/workflows/private-webext-build.yml
+++ b/.github/workflows/private-webext-build.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           action: build
           setup-options: -Denable_native_progs=false # Disable C++ code
+          meson-version: 0.57.1
       - uses: actions/upload-artifact@v2
         with:
           name: arcollect-webextension.zip
@@ -29,16 +30,15 @@ jobs:
         uses: actions/download-artifact@v2.0.9
         with:
           name: arcollect-webextension.zip
-          path: arcollect-webextension.zip
       - name: Unzip arcollect-webextension.zip
-        run: unzip arcollect-webextension.zip -d webextension
+        run: unzip arcollect.zip -d webextension
       - name: npm install web-ext
-        run: npm install --global web-ext
+        run: npm install web-ext
       - name: Perform signing on addons.mozilla.org
-        run: web-ext sign --no-input --no-config-discovery --channel unlisted -s webextension -a web-ext-artifacts
+        run: node ./node_modules/.bin/web-ext sign --no-input --no-config-discovery --channel unlisted -s webextension -a web-ext-artifacts
         env:
-          WEB_EXT_API_KEY: ${{ secrets.WEB_EXT_API_KEY }}
-          WEB_EXT_API_SECRET: ${{ secrets.WEB_EXT_API_SECRET }}
+          WEB_EXT_API_KEY: ${{ secrets.AMO_WEB_EXT_API_KEY }}
+          WEB_EXT_API_SECRET: ${{ secrets.AMO_WEB_EXT_API_SECRET }}
       - uses: actions/upload-artifact@v2
         with:
           name: web-ext-artifacts
