Set Meson minimum version to 0.57.1
	Also fixed deprecation warning about `meson.build_root()`

--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,7 @@ project('arcollect', 'cpp',
 	# |
 	# +---- Minor: Will be incremented one day
 	version: '0.2',
+	meson_version: '>=0.57.1',
 	default_options: [
 		'cpp_std=c++17',
 		'cpp_rtti=false',
