--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,17 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
+          meson-version: 0.57.1
       - name: Test project
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: test
+          meson-version: 0.57.1
       - name: Install project
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: install
+          meson-version: 0.57.1
         env:
           DESTDIR: "archive-out"
       - name: Archiving
