Made a SQLite wrap
	Now the SQLite 3.3.35 almalgation is automatically used if needed

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
+option('use_system_sqlite', type: 'feature', value: 'auto', description: 'Use the system SQLite library. Build an embeded version if false. Auto by default')
 option('enable_webextension', type: 'boolean', value: true, description: 'Build the webextension.')
 option('enable_native_progs', type: 'boolean', value: true, description: 'Build C++ code (desktop-app, webext-adder, ...). It is used and set to false in the webextension CI.')
