Added wrap for SDL2_ttf
	FIXME: Find out why the SDL2 wrap build but doesn't run.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: --force-fallback-for sqlite
+          setup-options: --force-fallback-for sqlite,sdl2_ttf
           meson-version: 0.57.1
       - name: Test project
         uses: BSFishy/meson-build@v1.0.3
