[github-actions] Added check-webextensions-same job in main.yml
	This check that the generated webextension is the same for all platforms

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,3 +124,37 @@ jobs:
         with:
           name: build-ubuntu-20_04_webextension.zip
           path: build/webextension/arcollect.zip
+  check-webextensions-same:
+    needs: [build, build-wrapped, build-ubuntu-20_04]
+    runs-on: [ubuntu-latest]
+    steps:
+      - name: Download build_webextension.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: build_webextension.zip
+          path: build_webextension
+      - name: Download build-wrapped_webextension.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: build-wrapped_webextension.zip
+          path: build-wrapped_webextension
+      - name: Download build-ubuntu-20_04_webextension.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: build-ubuntu-20_04_webextension.zip
+          path: build-ubuntu-20_04_webextension
+      - name: Make unpack dirs
+        run: mkdir build build-wrapped build-ubuntu-20_04
+      - name: Unpack build_webextension.zip
+        run: unzip ../build_webextension/arcollect.zip
+        working-directory: build
+      - name: Unpack build-wrapped_webextension.zip
+        run: unzip ../build-wrapped_webextension/arcollect.zip
+        working-directory: build-wrapped
+      - name: Unpack build-ubuntu-20_04_webextension.zip
+        run: unzip ../build-ubuntu-20_04_webextension/arcollect.zip
+        working-directory: build-ubuntu-20_04
+      - name: Compare build and build-wrapped results
+        run: diff -ry build build-wrapped
+      - name: Compare build and build-ubuntu-20_04 results
+        run: diff -ry build build-ubuntu-20_04
