--- a/meson.build
+++ b/meson.build
@@ -23,6 +23,7 @@ if enable_native_progs
 	dep_sdl2_image = dependency('SDL2_image')
 	dep_sdl2_ttf   = dependency('SDL2_ttf')
 	dep_sqlite3 = dependency('sqlite3', version: '>=3.35.0')
+	dep_rapidjson = dependency('rapidjson')
 endif
 
 # Configuration
