[github-actions] Put real AMO signing in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,10 +81,7 @@ jobs:
           DESTDIR: "archive-out"
   build-webextension:
     # Simply build the webextension (only)
-<<<<<<< HEAD
-=======
-    #needs: [test, test-wrapped, test-ubuntu-20_04]
->>>>>>> 0548a4e (Made release workflow)
+    needs: [test, test-wrapped, test-ubuntu-20_04]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -93,10 +90,6 @@ jobs:
           action: build
           setup-options: -Denable_native_progs=false # Disable C++ code
           meson-version: 0.57.1
-<<<<<<< HEAD
-=======
-          
->>>>>>> 0548a4e (Made release workflow)
       - uses: actions/upload-artifact@v2
         with:
           name: arcollect-webextension.zip
@@ -110,25 +103,22 @@ jobs:
         uses: actions/download-artifact@v2.0.9
         with:
           name: arcollect-webextension.zip
-<<<<<<< HEAD
       - name: Unzip arcollect-webextension.zip
         run: unzip arcollect.zip -d webextension
       - name: npm install web-ext
         run: npm install web-ext
-=======
->>>>>>> 0548a4e (Made release workflow)
-      - name: Fake signing 
-        run: mkdir web-ext-artifacts && cp arcollect.zip web-ext-artifacts
+      - name: Perform signing on addons.mozilla.org
+        run: node ./node_modules/.bin/web-ext sign --no-input --no-config-discovery --channel unlisted -s webextension -a web-ext-artifacts
+        env:
+          WEB_EXT_API_KEY: ${{ secrets.AMO_WEB_EXT_API_KEY }}
+          WEB_EXT_API_SECRET: ${{ secrets.AMO_WEB_EXT_API_SECRET }}
       - uses: actions/upload-artifact@v2
         with:
           name: web-ext-artifacts
           path: web-ext-artifacts
   release:
     # Create a new draft release
-<<<<<<< HEAD
-=======
     runs-on: ubuntu-latest
->>>>>>> 0548a4e (Made release workflow)
     needs: [sign-amo]
     steps:
       - name: Download AMO signed webextension
