--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: --force-fallback-for sqlite,sdl2_image,sdl2_ttf
+          setup-options: --force-fallback-for sqlite,sdl2,sdl2_image,sdl2_ttf
           meson-version: 0.57.1
       - name: Test project
         uses: BSFishy/meson-build@v1.0.3
