Beta port to Microsoft Windows
	It won't run right-now but it does build and pass tests

--- a/common/meson.build
+++ b/common/meson.build
@@ -12,7 +12,14 @@ common_incdirs = [
 	include_directories('sqlite3-hpp'),
 	config_h_inc,
 ]
+common_link_args = [
+]
 
 common_lib = static_library('common', common_srcs, include_directories: common_incdirs, dependencies: common_deps)
 
-common_dep = declare_dependency(link_with: common_lib, include_directories: common_incdirs, dependencies: common_deps)
+if (host_machine.system() == 'windows') and (cpp.get_id() == 'gcc')
+	# Statically link MinGW libs
+	common_link_args += ['-static-libgcc','-static-libstdc++']
+endif
+
+common_dep = declare_dependency(link_with: common_lib, link_args: common_link_args, include_directories: common_incdirs, dependencies: common_deps)
