[github-actions] Fixed bad libcurl-dev name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install SDL2, his image and ttf modules and curl
-        run: sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libcurl-dev
+        run: sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libcurl4-openssl-dev
       - name: Install Mozilla's web-ext with npm
         run: sudo npm install -g web-ext
       - name: Build project
