Added support for DeviantArt
	This platform is more commercial and highres picures require an account, I don't have on and only the lowres art is downloaded.
	Also "Mature" tag is not supported

--- a/webextension/manifest.json.in
+++ b/webextension/manifest.json.in
@@ -13,6 +13,9 @@
 	},{
 		"matches": ["https://e621.net/posts/*","https://e926.net/posts/*"],
 		"js": ["content-scripts/common.js","content-scripts/e621.net.js"]
+	},{
+		"matches": ["https://www.deviantart.com/*/art/*"],
+		"js": ["content-scripts/common.js","content-scripts/deviantart.com.js"]
 	}],
 	"permissions": [
 		"nativeMessaging"
